--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,22 @@
 	<head>
 		<meta charset='utf-8'>
    	 	<meta name="viewport" content="width=device-width">
+   	 	<link href="https://fonts.googleapis.com/css?family=Lato|Bree+Serif" rel="stylesheet">
 	</head>
 	<body>
 		<script src='bundle.js' type='text/javascript'></script>
+
+		<!-- WEBPAGE LAYOUT -->
+		<h1 style="text-align: center">What kind of songs/artist are more likely to make it on <br>top 100 among Sportify users?</h1>
+		<p style="text-align: center">Analysis on artist genres, audio features and artist popularity</p>
+		<p style="text-align: center">What are those top 100 songs on Sportify from 2010 - 2018? </p>
+		<p style="text-align: center">Do people's taste of music change over the year? (audio feature)</p>
+		<p style="text-align: center">Who are those pop singers make it to the top 100 most often and what common features do they have? artistinfo</p>
+
+		<div class='main'>
+			<div class="nav" style='margin-left: 100px'></div>
+			<div class="ranking-container"></div>
+			<div class="artistBubble-container"></div>
+		</div>
 	</body>
 </html>
