--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
 			<div class="nav" style='margin-left: 100px'></div>
 			<div class="ranking-container"></div>
 			<div class="artistBubble-container"></div>
+			<div class="feature-container"></div>
 		</div>
 	</body>
 </html>
