--- a/src/index.html
+++ b/src/index.html
@@ -3,29 +3,67 @@
 	<head>
 		<meta charset='utf-8'>
    	 	<meta name="viewport" content="width=device-width">
-   	 	<link href="https://fonts.googleapis.com/css?family=Lato|Bree+Serif" rel="stylesheet">
+   	 	<link href="https://fonts.googleapis.com/css?family=Lato|Anton|Raleway:600" rel="stylesheet">
 	</head>
 	<body>
 		<script src='bundle.js' type='text/javascript'></script>
 
 		<!-- WEBPAGE LAYOUT -->
-		<h1 style="text-align: center">What kind of songs/artist are more likely to make it on <br>top 100 among Sportify users?</h1>
+
+		<!-- intro text -->
+		<img class="cover" src="readme/cover-2.jpg"></img>
+		<h1 id="title">How musically similar top songs are? </h1>
+		<h2 style="font-size:22px"> Our charts are getting <span style="color:#9E3B71">sadder</span>, but almost equally <span style="color:#9E3B71">danceable</span>.</h2>
+			<p id= "subtitle" >By Ruobing Su</p>
+			<p class= 'text'>The year of 2018 has been a pretty productive year for Drake - precisely, since the year of 2010, Drake has been one of the most popular hip pop singer on Spotify who owns over 35 million followers. His track, More Life, became Spotify’s most popular opening day album ever, with more than 60 million streams in the first 24 hours. Amazingly, his 2018 Scorpion album broke the record for a second time; it was listened to more than 130 million times in the first 24 hours after release.</p>
+
+			<p class='text'>Singers like Drake who have predominant reputation on hip-pop, such as
+			<span style="color:#9E3B71;font-weight: bold"> Jay-Z, Kanye West and Rihanna</span>, have been in the charts for more than a decade since debut. Many research and studies show that now-a-days, hit songs are becoming less varied musically, especially when rap music becomes today’s pop music. </p>
+
+			<p class='text'><span style="color:#9E3B71;font-weight: bold">Is there something unique about today’s hits—artists taking fewer risks and creating a narrower range of sounds? </span></p>
+
+			<p class='text'>Using the data set extracted from Spotify’s web API, I exam how pop music diverse or change over the year in terms of audio features by visualizing the hot tracks of each year’s hot 100 tracks. </p>
+		<!-- end of intro text -->
+
+		<!-- main visualization  -->
 		<div class='main'>
-			<div class="ranking-container">
-				<div class="nav" id="yearRanking" style="width:300px"></div>
-			</div>
-			<div class="artistBubble-container">
-				<div class="nav" id="featureArtist" style="width:300px"></div>
-			</div>
+			<!-- ranking vis -->
+			<p class='text' style="color:#9E3B71;font-size:18px">Wait, who are those pop stars on hot 100 tracks over the year?</p>
+			<div class="nav" id="yearRanking" style="width:300px;margin-left: 40%"></div>
+			<div class="ranking-container"></div>
+			
+
+			<!-- bubble vis -->
+			<p class= 'text'>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<div class="nav" id="featureArtist" style="width:300px;margin-left: 40%;margin-top: 5%"></div>
+			<div class="artistBubble-container"></div>
 			<div class="tooltip-container"></div>
-			<div class="feature-container">
-				<button type="button" class="btn btn-secondary">Danceability</button>
-				<button type="button" class="btn btn-secondary">Energy</button>
-				<button type="button" class="btn btn-secondary">Liveness</button>
-				<button type="button" class="btn btn-secondary">Speechiness</button>
-				<button type="button" class="btn btn-secondary">Acousticness</button>
-				<button type="button" class="btn btn-secondary">Valence</button>
+			
+
+			<!-- audio feature by year -->
+			<p class= 'text' >Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<div class="selection">
+				<button type="button" class="btn btn-secondary" id="danceability">Danceability</button>
+				<button type="button" class="btn btn-secondary" id="energy">Energy</button>
+				<button type="button" class="btn btn-secondary" id="liveness">Liveness</button>
+				<button type="button" class="btn btn-secondary" id="speechiness">Speechiness</button>
+				<button type="button" class="btn btn-secondary" id="acousticness">Acousticness</button>
+				<button type="button" class="btn btn-secondary" id="valence">Valence</button>
+				<button type="button" class="btn btn-secondary" id="clear">Clear</button>
 			</div>
+			<div class="definition"></div>
+			<div class="feature-container"></div>
+			<div class="tooltip-feature"></div>
 		</div>
 	</body>
 </html>
