--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
 		<meta charset='utf-8'>
    	 	<meta name="viewport" content="width=device-width">
    	 	<link href="https://fonts.googleapis.com/css?family=Lato|Anton|Raleway:600" rel="stylesheet">
+<!--    	 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css"> -->
 	</head>
 	<body>
 		<script src='bundle.js' type='text/javascript'></script>
@@ -13,57 +14,64 @@
 		<!-- intro text -->
 		<img class="cover" src="readme/cover-2.jpg"></img>
 		<h1 id="title">How musically similar top songs are? </h1>
-		<h2 style="font-size:22px"> Our charts are getting <span style="color:#9E3B71">sadder</span>, but almost equally <span style="color:#9E3B71">danceable</span>.</h2>
+		<h2 style="font-size:22px"> Our charts are getting <span style="color:#9E3B71">sadder</span>, but almost equally <span style="color:white">danceable</span>.</h2>
 			<p id= "subtitle" >By Ruobing Su</p>
-			<p class= 'text'>The year of 2018 has been a pretty productive year for Drake - precisely, since the year of 2010, Drake has been one of the most popular hip pop singer on Spotify who owns over 35 million followers. His track, More Life, became Spotify’s most popular opening day album ever, with more than 60 million streams in the first 24 hours. Amazingly, his 2018 Scorpion album broke the record for a second time; it was listened to more than 130 million times in the first 24 hours after release.</p>
+			
+			<p class="text">When we talk about pop music these days, many of them sound very similar - from how the lyrics are written, to who is the actual or featuring singer. The biggest hits since 2010 up to 2018 can be <span style="color:#9E3B71;font-weight: bold">Drake, Ed Sheeran, Calvin Harris, Rihanna, David Guetta, Foster The People, and Jay Z.</span> Many of the names have been constantly on the hot 100 chart over the years, and sometimes it is too easy to predict a pop singer is going to make it to Hot 100 simply based on his/her fame and music genre. </p>
 
-			<p class='text'>Singers like Drake who have predominant reputation on hip-pop, such as
-			<span style="color:#9E3B71;font-weight: bold"> Jay-Z, Kanye West and Rihanna</span>, have been in the charts for more than a decade since debut. Many research and studies show that now-a-days, hit songs are becoming less varied musically, especially when rap music becomes today’s pop music. </p>
-
-			<p class='text'><span style="color:#9E3B71;font-weight: bold">Is there something unique about today’s hits—artists taking fewer risks and creating a narrower range of sounds? </span></p>
-
-			<p class='text'>Using the data set extracted from Spotify’s web API, I exam how pop music diverse or change over the year in terms of audio features by visualizing the hot tracks of each year’s hot 100 tracks. </p>
+			<p class='text'><span style="color:#9E3B71;font-weight: bold">Is there something unique about today’s hits—artists taking fewer risks and creating a narrower range of sounds?</span> Using the data set extracted from Spotify’s web API, I exam how pop music diverse or change over the year in terms of audio features by visualizing the hot tracks of each year’s hot 100 tracks.</p>
 		<!-- end of intro text -->
 
 		<!-- main visualization  -->
 		<div class='main'>
 			<!-- ranking vis -->
-			<p class='text' style="color:#9E3B71;font-size:18px">Wait, who are those pop stars on hot 100 tracks over the year?</p>
+			<p class='text'><span style="color:#9E3B71;font-weight: bold">Which are those hot 100 tracks for each year?</p>
+			<p class='text'>The following clusters show Hot 100 tracks by year from 2010 to 2018. The color scale varies from where the track ranks during that particular year - the lighter the color is, the higher the rank is. </p>
 			<div class="nav" id="yearRanking" style="width:300px;margin-left: 40%"></div>
+			<div class="ranking-tooltip"></div>
 			<div class="ranking-container"></div>
 			
 
 			<!-- bubble vis -->
-			<p class= 'text'>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-			<div class="nav" id="featureArtist" style="width:300px;margin-left: 40%;margin-top: 5%"></div>
+			<p class= 'text'>The year of 2016 has been a pretty productive year for Drake - precisely, since the year of 2010, Drake has been one of the most popular hip pop singers on Spotify who owns over 35 million followers. Like most Drake content, the album <i>View</i> in 2016 performed remarkably well—it’s spent more than 100 consecutive weeks on the Billboard 200. On sportify's Hot 100, six tracks out of the <i>View</i> album were in the chart of 2016. The song <i>Hotline Bling</i>, has been on the chart of both 2015 and 2016, ranking 14 and 41. Amazingly, his 2018 Scorpion album was listened to more than 130 million times in the first 24 hours after release.</p>
+
+			<p style="text-align: center;"><iframe src="https://open.spotify.com/embed/album/40GMAhriYJRO1rsY4YdrZb" width="600" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+			</p>
+
+			<p class='text'>Singers like Drake who have predominant reputation on hip-pop and dance pop, are performing extremely well on Spotify. Many research and studies show that now-a-days, hit songs are becoming less varied musically, especially when rap music becomes today’s pop music. </p>
+
+			<p class='text'>The bubble chart below shows an overview of the all the artists who are on the Hot 100 from 2010 to 2018. The radius shows the number of the tracks on the Hot 100 for the eight years, and the scale of the color shows the number of followers on Spotify - the darker it is, the more follower the artist has.</p>
+			<div class='color-control btn-group'></div>
+			<div class="artistBubble-img"></div>
+			<div class="artistBubble-tooltip"></div>
 			<div class="artistBubble-container"></div>
+			<!-- <div class='color-control btn-group'></div> -->
+			<div class="nav" id="featureArtist" style="width:300px;margin-left: 40%"></div>
 			<div class="tooltip-container"></div>
 			
 
 			<!-- audio feature by year -->
-			<p class= 'text' >Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-			<div class="selection">
+			<p class= 'text'>It’s obviously biased to just reference Spotify’s hot 100 track charts to draw a conclusion of the diversity of American pop music. The fact that Spotify is much more popular among younger generation - according to a survey conducted by AdWeek that 72% of Spotify listeners are Millennials, which creates a slightly younger and trendy vibe when it comes to music consumption.</p>
+
+			<p class= 'text'>To further analyze and understand every single track that is on the Hot 100, the data set has a range of different Audio features which are calculated by <span style="color:#9E3B71;font-weight: bold">Echonest</span>’s algorithms, now owned by Spotify. The features range from the <span style="color:#9E3B71;font-weight: bold">lyrics, tempo and production</span>, which are pretty comprehensive in terms of analyzing a track. Using the nitty-gritty of the audio feature data, I would like to show a distribution of how the songs for hot 100 from 2010 to 2018 differ and change over the time, or if there is anything interesting to be discovered. </p>
+			<div class="selection btn-group" role="group" style="margin-top: 3%">
 				<button type="button" class="btn btn-secondary" id="danceability">Danceability</button>
 				<button type="button" class="btn btn-secondary" id="energy">Energy</button>
 				<button type="button" class="btn btn-secondary" id="liveness">Liveness</button>
 				<button type="button" class="btn btn-secondary" id="speechiness">Speechiness</button>
 				<button type="button" class="btn btn-secondary" id="acousticness">Acousticness</button>
 				<button type="button" class="btn btn-secondary" id="valence">Valence</button>
-				<button type="button" class="btn btn-secondary" id="clear">Clear</button>
+				<button type="button" class="btn btn-secondary" id="clear" onclick="reset()">Clear</button>
 			</div>
-			<div class="definition"></div>
-			<div class="feature-container"></div>
-			<div class="tooltip-feature"></div>
+
+			<div class='feature'></div>
+				<div class="definition"></div>
+				<div class="feature-container">
+				<div class="tooltip-feature"></div>
+			</div>
+			
+			
+			
 		</div>
 	</body>
 </html>
