--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 
 		<!-- intro text -->
 		<img class="cover" src="readme/cover-2.jpg"></img>
-		<h1 id="title">How musically similar top songs are? </h1>
+		<h1 id="title">The Music Diversity of Hot Songs </h1>
 		<h2 style="font-size:22px"> Our charts are getting <span style="color:#9E3B71">sadder</span>, but almost equally <span style="color:white">danceable</span>.</h2>
 			<p id= "subtitle" >By Ruobing Su</p>
 			
@@ -51,7 +51,7 @@
 			
 
 			<!-- audio feature by year -->
-			<p class= 'text'>It’s obviously biased to just reference Spotify’s hot 100 track charts to draw a conclusion of the diversity of American pop music. The fact that Spotify is much more popular among younger generation - according to a survey conducted by AdWeek that 72% of Spotify listeners are Millennials, which creates a slightly younger and trendy vibe when it comes to music consumption.</p>
+			<p class= 'text'>It’s obviously biased to just reference Spotify’s hot 100 track charts to draw a conclusion of the diversity of American pop music. The fact that Spotify is much more popular among younger generation - according to a survey conducted by AdWeek that 72% of Spotify listeners are Millennials, which creates a slightly younger and trendy vibe when it comes to music consumption. </p>
 
 			<p class= 'text'>To further analyze and understand every single track that is on the Hot 100, the data set has a range of different Audio features which are calculated by <span style="color:#9E3B71;font-weight: bold">Echonest</span>’s algorithms, now owned by Spotify. The features range from the <span style="color:#9E3B71;font-weight: bold">lyrics, tempo and production</span>, which are pretty comprehensive in terms of analyzing a track. Using the nitty-gritty of the audio feature data, I would like to show a distribution of how the songs for hot 100 from 2010 to 2018 differ and change over the time, or if there is anything interesting to be discovered. </p>
 			<div class="selection btn-group" role="group" style="margin-top: 3%">
@@ -69,9 +69,7 @@
 				<div class="feature-container">
 				<div class="tooltip-feature"></div>
 			</div>
-			
-			
-			
+						
 		</div>
 	</body>
 </html>
